[10.9] [PR 524] config apps sample update (openidconnect)
Backport of PR #524

--- a/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
+++ b/modules/admin_manual/pages/configuration/server/config_apps_sample_php_parameters.adoc
@@ -328,9 +328,7 @@ MUST declare this with `['enabled' => false]` like shown in the Easy Setup examp
 
 auto-update::
 When using the provisioning mode `auto-update`, user account info will update with the current
-information provided by the OpenID Connect provider upon each user log in. In sub-key `update`,
-more config options like `enabled` or `attributes` can be set. Account attributes that
-will be updated can be specified in the `attributes` key.
+information provided by the OpenID Connect provider upon each user log in.
 
 insecure::
 Boolean value (`true`/`false`), no SSL verification will take place when talking to the
@@ -443,8 +441,6 @@ https://datatracker.ietf.org/doc/html/rfc7662 for more information on token intr
 			'update' => [
 				  // enable the user info auto-update mode
 				'enabled' => true,
-				  // defines account attributes that will be auto-updated
-				'attributes' => ['email', 'display-name'],
 			],
 		],
 	],
